Fix white space

--- a/less/nav-scroll-core.less
+++ b/less/nav-scroll-core.less
@@ -16,6 +16,10 @@ div[data-nav-scroll="true"] {
             float: none;
             margin: 0;
             vertical-align: middle;
+
+            > a {
+                white-space: nowrap;
+            }
         }
 
         &.navbar-nav {
